--- a/src/main/resources/velocity/issue/one-issue.vm
+++ b/src/main/resources/velocity/issue/one-issue.vm
@@ -1,163 +1,167 @@
 #parse("/velocity/layout.vm")
 #@mainLayout()
-<div class="container-fluid">
-    <div class="row justify-content-center">
-        <div class="col-10">
-            <form id="createIssue" method="post">
-                <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" class="form-control" name="name" value="$oneIssue.getName()" required>
-                </div>
-                <div class="form-group">
-                    <label for="description">Description:</label>
-                    <textarea class="form-control" rows="5" name="description">$oneIssue.getDescription()</textarea>
-                </div>
-                <div class="form-group">
-                    <label for="critical">Critical:</label>
-                    <select class="form-control" name="critical">
-                        #if($oneIssue.getCriticalStringNumber() == 0)
-                            <option value="0" selected>Minor</option>
-                        #else
-                            <option value="0">Minor</option>
-                        #end
-                        #if($oneIssue.getCriticalStringNumber() == 1)
-                            <option value="1" selected>Major</option>
-                        #else
-                            <option value="1">Major</option>
-                        #end
-                        #if($oneIssue.getCriticalStringNumber() == 2)
-                            <option value="2" selected>Critical</option>
-                        #else
-                            <option value="2">Critical</option>
-                        #end
-                        #if($oneIssue.getCriticalStringNumber() == 3)
-                            <option value="3" selected>Blocker</option>
-                        #else
-                            <option value="3">Blocker</option>
-                        #end
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="priority">Priority:</label>
-                    <select class="form-control" name="priority">
-                        #if($oneIssue.getPriorityStringNumber() == 0)
-                            <option value="0" selected>Low</option>
-                        #else
-                            <option value="0">Low</option>
-                        #end
-                        #if($oneIssue.getPriorityStringNumber() == 1)
-                            <option value="1" selected>Medium</option>
-                        #else
-                            <option value="1">Medium</option>
-                        #end
-                        #if($oneIssue.getPriorityStringNumber() == 2)
-                            <option value="2" selected>High</option>
-                        #else
-                            <option value="2">High</option>
-                        #end
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="steps">Reconstruct steps of defect:</label>
-                    <textarea class="form-control" rows="5" name="steps">$oneIssue.getSteps()</textarea>
-                </div>
-                <div class="form-group">
-                    <label for="expected">Expected result:</label>
-                    <textarea class="form-control" rows="5" name="expected">$oneIssue.getExpected()</textarea>
-                </div>
-                <div class="form-group">
-                    <label for="actual">Actual restult:</label>
-                    <textarea class="form-control" rows="5" name="actual">$oneIssue.getActual()</textarea>
-                </div>
-                <div class="form-group">
-                    <label for="assign">Assign:</label>
-                    <input type="text" class="form-control" name="assign" value="">
-                </div>
-                <div class="form-group">
-                    <label for="status">Status:</label>
-                    <select class="form-control" name="status">
-                        #if($oneIssue.getStatusStringNumber() == 0)
-                            <option value="0" selected>New</option>
-                        #else
-                            <option value="0">New</option>
-                        #end
-                        #if($oneIssue.getStatusStringNumber() == 1)
-                            <option value="1" selected>Assigned</option>
-                        #else
-                            <option value="1">Assigned</option>
-                        #end
-                        #if($oneIssue.getStatusStringNumber() == 2)
-                            <option value="2" selected>InProgress</option>
-                        #else
-                            <option value="2">InProgress</option>
-                        #end
-                        #if($oneIssue.getStatusStringNumber() == 3)
-                            <option value="3" selected>Review</option>
-                        #else
-                            <option value="3">Review</option>
-                        #end
-                        #if($oneIssue.getStatusStringNumber() == 4)
-                            <option value="4" selected>Fixed</option>
-                        #else
-                            <option value="4">Fixed</option>
-                        #end
-                        #if($oneIssue.getStatusStringNumber() == 5)
-                            <option value="5" selected>Reopened</option>
-                        #else
-                            <option value="5">Reopened</option>
-                        #end
-                        #if($oneIssue.getStatusStringNumber() == 6)
-                            <option value="6" selected>Closed</option>
-                        #else
-                            <option value="6">Closed</option>
-                        #end
-                        #if($oneIssue.getStatusStringNumber() == 7)
-                            <option value="7" selected>Canceled</option>
-                        #else
-                            <option value="7">Canceled</option>
-                        #end
-                    </select>
-                </div>
+<form id="createIssue" method="post">
+    <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="text" class="form-control" name="name" value="$oneIssue.getName()" required>
+    </div>
+    <div class="form-group">
+        <label for="description">Description:</label>
+        <textarea class="form-control" rows="5" name="description">$oneIssue.getDescription()</textarea>
+    </div>
+    <div class="form-group">
+        <label for="critical">Critical:</label>
+        <select class="form-control" name="critical">
+            #if($oneIssue.getCriticalStringNumber() == 0)
+                <option value="0" selected>Minor</option>
+            #else
+                <option value="0">Minor</option>
+            #end
+            #if($oneIssue.getCriticalStringNumber() == 1)
+                <option value="1" selected>Major</option>
+            #else
+                <option value="1">Major</option>
+            #end
+            #if($oneIssue.getCriticalStringNumber() == 2)
+                <option value="2" selected>Critical</option>
+            #else
+                <option value="2">Critical</option>
+            #end
+            #if($oneIssue.getCriticalStringNumber() == 3)
+                <option value="3" selected>Blocker</option>
+            #else
+                <option value="3">Blocker</option>
+            #end
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="priority">Priority:</label>
+        <select class="form-control" name="priority">
+            #if($oneIssue.getPriorityStringNumber() == 0)
+                <option value="0" selected>Low</option>
+            #else
+                <option value="0">Low</option>
+            #end
+            #if($oneIssue.getPriorityStringNumber() == 1)
+                <option value="1" selected>Medium</option>
+            #else
+                <option value="1">Medium</option>
+            #end
+            #if($oneIssue.getPriorityStringNumber() == 2)
+                <option value="2" selected>High</option>
+            #else
+                <option value="2">High</option>
+            #end
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="steps">Reconstruct steps of defect:</label>
+        <textarea class="form-control" rows="5" name="steps">$oneIssue.getSteps()</textarea>
+    </div>
+    <div class="form-group">
+        <label for="expected">Expected result:</label>
+        <textarea class="form-control" rows="5" name="expected">$oneIssue.getExpected()</textarea>
+    </div>
+    <div class="form-group">
+        <label for="actual">Actual restult:</label>
+        <textarea class="form-control" rows="5" name="actual">$oneIssue.getActual()</textarea>
+    </div>
+    <div class="form-group">
+        <label for="assign">Assign:</label>
+        <select class="form-control" name="assign">
+            <option value="0">None</option>
+            #foreach($user in $users)
+                #if($user.getId() == $oneIssue.getExecutorId())
+                    <option value="$user.getId()" selected>$user.getName()</option>
+                #else
+                    <option value="$user.getId()">$user.getName()</option>
+                #end
+            #end
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="status">Status:</label>
+        <select class="form-control" name="status">
+            #if($oneIssue.getStatusStringNumber() == 0)
+                <option value="0" selected>New</option>
+            #else
+                <option value="0">New</option>
+            #end
+            #if($oneIssue.getStatusStringNumber() == 1)
+                <option value="1" selected>Assigned</option>
+            #else
+                <option value="1">Assigned</option>
+            #end
+            #if($oneIssue.getStatusStringNumber() == 2)
+                <option value="2" selected>InProgress</option>
+            #else
+                <option value="2">InProgress</option>
+            #end
+            #if($oneIssue.getStatusStringNumber() == 3)
+                <option value="3" selected>Review</option>
+            #else
+                <option value="3">Review</option>
+            #end
+            #if($oneIssue.getStatusStringNumber() == 4)
+                <option value="4" selected>Fixed</option>
+            #else
+                <option value="4">Fixed</option>
+            #end
+            #if($oneIssue.getStatusStringNumber() == 5)
+                <option value="5" selected>Reopened</option>
+            #else
+                <option value="5">Reopened</option>
+            #end
+            #if($oneIssue.getStatusStringNumber() == 6)
+                <option value="6" selected>Closed</option>
+            #else
+                <option value="6">Closed</option>
+            #end
+            #if($oneIssue.getStatusStringNumber() == 7)
+                <option value="7" selected>Canceled</option>
+            #else
+                <option value="7">Canceled</option>
+            #end
+        </select>
+    </div>
 
-                <!-- COMMENTS SECTION -->
-                <div class="form-group">
-                    <div class="panel panel-info">
-                        <div class="panel-heading">
-                            Comments:
-                        </div>
-                        <div class="panel-body comments">
-                            <textarea class="form-control" placeholder="Leave your feedback here" rows="5"></textarea>
-                            <br>
-                            <button type="button" class="btn btn-info pull-right">Send</button>
-                            <div class="clearfix"></div>
-                            <hr>
-                            <ul class="media-list">
-                                <li class="media">
-                                    <div class="comment">
-                                        <div class="media-body">
-                                            <strong class="text-success">Пользователь 1</strong>
-                                            <br>
-                                            <span class="text-muted">
-                                                <small class="text-muted">2016-02-11</small>
-                                            </span>
-                                            <p>
-                                                Здесь текст комментария Здесь текст комментария Здесь текст комментария Здесь текст комментария Здесь текст комментария Здесь текст комментария Здесь текст комментария
-                                            </p>
-                                        </div>
-                                        <div class="clearfix"></div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <input type="submit", formaction="/issues/update/$oneIssue.id"
-                       class="btn btn-secondary", value="Update">
-                <input type="submit", formaction="/issues/delete/$oneIssue.id"
-                       class="btn btn-danger", value="Delete">
-            </form>
+    <!-- COMMENTS SECTION -->
+    <div class="form-group">
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                Comments:
+            </div>
+            <div class="panel-body comments">
+                <textarea class="form-control" placeholder="Leave your comment here" rows="5" name="comment_message"></textarea>
+                <br>
+                <input type="submit", formaction="/issues/comment/$oneIssue.id"
+                       class="btn btn-info pull-right", value="Send">
+                <div class="clearfix"></div>
+                <hr>
+                <ul class="media-list">
+                    #foreach($comment in $comments)
+                        <li class="media">
+                            <div class="comment">
+                                <div class="media-body">
+                                    <strong class="text-success">$comment.getUserName()</strong>
+                                    <br>
+                                    <span class="text-muted">
+                                        <small class="text-muted">$comment.getCreatedDateString()</small>
+                                    </span>
+                                    <p>$comment.getDescription()</p>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                        </li>
+                    #end
+                </ul>
+            </div>
         </div>
     </div>
-</div>
+
+    <input type="submit", formaction="/issues/update/$oneIssue.id"
+           class="btn btn-secondary", value="Update">
+    <input type="submit", formaction="/issues/delete/$oneIssue.id"
+           class="btn btn-danger", value="Delete">
+</form>
 #end
