--- a/src/main/resources/velocity/layout.vm
+++ b/src/main/resources/velocity/layout.vm
@@ -1,9 +1,10 @@
 #macro(mainLayout)
 <html>
 <head>
-    <title>Trellolike</title>
+    <title>Trello-like</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="/img/logo.svg">
 
     <!--<link rel="stylesheet" href="/public/main.css">-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -18,40 +19,88 @@
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>-->
+    <style>
+        html {
+            position: relative;
+            min-height: 100%;
+        }
+        body {
+            margin-bottom: 60px;
+        }
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            background-color: #f5f5f5;
+        }
+    </style>
 </head>
 <body>
-<header>
-    <nav>
-##        <a href="/issues"><img id="logo" src="public/img/logo.svg" alt="Javalin TSS Bug Trucker"></a>
-        <a href="/issues">Issues</a>
-##        <ul id="chooseLanguage">
-##            <form>
-##                <li>
-##                    <button name="locale" value="en" style="background-image: url(public/img/english.png);"></button>
-##                </li>
-##            </form>
-##        </ul>
-        <ul id="menu">
-            #if($currentUser)
-                <li>
-                    <form method="post" action="/logout">
-                        <button id="logout">$msg.get("COMMON_NAV_LOGOUT")</button>
-                    </form>
-                </li>
-            #else
-                <li><a href="/login">$msg.get("COMMON_NAV_LOGIN")</a></li>
-            #end
-        </ul>
-    </nav>
-</header>
+    <header>
+
+        <div class="collapse bg-dark" id="navbarHeader">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-8 col-md-7 py-4">
+                        <h4 class="text-white">About</h4>
+                        <p class="text-muted">
+                            This Issue Tracker fot studying.
+                        </p>
+                    </div>
+                    <div class="col-sm-2 offset-md-1 py-4">
+                        <h4 class="text-white">Contact</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="#" class="text-white">Twitter</a></li>
+                            <li><a href="#" class="text-white">Facebook</a></li>
+                            <li><a href="#" class="text-white">Email</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-2 py-4">
+                        #if($currentUser)
+                            <form method="post" action="/logout">
+                                <button id="logout">$msg.get("COMMON_NAV_LOGOUT")</button>
+                            </form>
+                        #else
+                            <a href="/login">$msg.get("COMMON_NAV_LOGIN")</a>
+                        #end
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="navbar navbar-dark bg-dark shadow-sm">
+            <div class="container d-flex justify-content-between">
+                <a href="/issues" class="navbar-brand d-flex align-items-center">
+                    <strong>Issues</strong>##<img id="logo" src="/public/img/logo.jpg" alt="logo">
+                </a>
+                ##<a href="#" class="navbar-brand d-flex align-items-center">
+                ##    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
+                ##    <strong>Album</strong>
+                ##</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+        </div>
+    </header>
+    <br>
     <main>
         <div id="content" class="container-fluid">
-            $bodyContent
+            <div class="row justify-content-center">
+                <div class="col-10">
+                    $bodyContent
+                </div>
+            </div>
         </div>
     </main>
-    <footer>
-        <div class="container-fluid">
-            This is footer
+    <footer class="footer">
+        <br>
+        <div class="container">
+            <p class="float-right">
+                <a href="#">Back to top</a>
+            </p>
+            <p>
+                Copyright license.
+            </p>
         </div>
     </footer>
 </body>
