--- a/src/main/resources/velocity/layout.vm
+++ b/src/main/resources/velocity/layout.vm
@@ -62,6 +62,7 @@
                             </form>
                         #else
                             <a href="/login">$msg.get("COMMON_NAV_LOGIN")</a>
+                            <a href="/users/new">$msg.get("COMMON_NAV_RGISTER")</a>
                         #end
                     </div>
                 </div>
