--- a/src/main/resources/velocity/layout.vm
+++ b/src/main/resources/velocity/layout.vm
@@ -44,10 +44,10 @@
                     <div class="col-sm-8 col-md-7 py-4">
                         <h4 class="text-white">About</h4>
                         <p class="text-muted">
-                            This Issue Tracker fot studying.
+                            This Issue Tracker for studying.
                         </p>
                     </div>
-                    <div class="col-sm-2 offset-md-1 py-4">
+                    <div class="col-sm-4 offset-md-1 py-4">
                         <h4 class="text-white">Contact</h4>
                         <ul class="list-unstyled">
                             <li><a href="#" class="text-white">Twitter</a></li>
@@ -70,27 +70,36 @@
         </div>
         <div class="navbar navbar-dark bg-dark shadow-sm">
             <div class="container d-flex justify-content-between">
-                <a href="/issues" class="navbar-brand d-flex align-items-center">
-                    <strong>Issues</strong>##<img id="logo" src="/public/img/logo.jpg" alt="logo">
-                </a>
+                <div class="col-sm-2">
+                    <a href="/projects" class="navbar-brand d-flex align-items-center">
+                        <strong>Projects</strong>##<img id="logo" src="/public/img/logo.jpg" alt="logo">
+                    </a>
+                </div>
                 ##<a href="#" class="navbar-brand d-flex align-items-center">
                 ##    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
                 ##    <strong>Album</strong>
                 ##</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <div class="col-sm-1 offset-sm-7">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="col-sm-2">
+                    #if($currentUser)
+                        <form method="post" action="/logout">
+                            <button class="btn btn-outline-light" id="logout">$msg.get("COMMON_NAV_LOGOUT")</button>
+                        </form>
+                    #else
+                        <a class="btn btn-outline-light" href="/login">$msg.get("COMMON_NAV_LOGIN")</a>
+                    #end
+                </div>
             </div>
         </div>
     </header>
     <br>
     <main>
-        <div id="content" class="container-fluid">
-            <div class="row justify-content-center">
-                <div class="col-10">
-                    $bodyContent
-                </div>
-            </div>
+        <div id="content" class="container">
+            $bodyContent
         </div>
     </main>
     <footer class="footer">
@@ -99,9 +108,14 @@
             <p class="float-right">
                 <a href="#">Back to top</a>
             </p>
-            <p>
-                Copyright license.
-            </p>
+            <div class="row">
+                <div class="col-sm-4">
+                    Copyright © 2020. All rights reserved.
+                </div>
+                <div class="col-sm-2">
+                    <a href="#">Terms of Use</a>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
