--- a/src/main/resources/velocity/layout.vm
+++ b/src/main/resources/velocity/layout.vm
@@ -33,6 +33,10 @@
             width: 100%;
             background-color: #f5f5f5;
         }
+        #logo {
+            height: 80px;
+            weight: 80px;
+        }
     </style>
 </head>
 <body>
@@ -47,24 +51,6 @@
                             This Issue Tracker for studying.
                         </p>
                     </div>
-                    <div class="col-sm-4 offset-md-1 py-4">
-                        <h4 class="text-white">Contact</h4>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="text-white">Twitter</a></li>
-                            <li><a href="#" class="text-white">Facebook</a></li>
-                            <li><a href="#" class="text-white">Email</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-2 py-4">
-                        #if($currentUser)
-                            <form method="post" action="/logout">
-                                <button id="logout">$msg.get("COMMON_NAV_LOGOUT")</button>
-                            </form>
-                        #else
-                            <a href="/login">$msg.get("COMMON_NAV_LOGIN")</a>
-                            <a href="/users/new">$msg.get("COMMON_NAV_RGISTER")</a>
-                        #end
-                    </div>
                 </div>
             </div>
         </div>
@@ -72,7 +58,7 @@
             <div class="container d-flex justify-content-between">
                 <div class="col-sm-2">
                     <a href="/projects" class="navbar-brand d-flex align-items-center">
-                        <strong>Projects</strong>##<img id="logo" src="/public/img/logo.jpg" alt="logo">
+                        <img id="logo" src="/img/logo.png" alt="Bug Trucking">
                     </a>
                 </div>
                 ##<a href="#" class="navbar-brand d-flex align-items-center">
@@ -91,6 +77,7 @@
                         </form>
                     #else
                         <a class="btn btn-outline-light" href="/login">$msg.get("COMMON_NAV_LOGIN")</a>
+                        <a class="btn btn-outline-light" href="/users/new">$msg.get("COMMON_NAV_RGISTER")</a>
                     #end
                 </div>
             </div>
