--- a/src/main/resources/velocity/notFound.vm
+++ b/src/main/resources/velocity/notFound.vm
@@ -1,4 +1,5 @@
 #parse("/velocity/layout.vm")
 #@mainLayout()
-<h1>404 Something went wrong</h1>
+<h1 class="card-title text-center">Error 404</h1>
+<h3 class="card-title text-center">the page you requested could not be found</h3>
 #end
